site/01-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: reporter
  namespace: reporter
  labels:
    app: reporter
    app.kubernetes.io/component: reporter
    app.kubernetes.io/instance: reporter
    app.kubernetes.io/name: reporter
    app.kubernetes.io/part-of: reporter
    app.openshift.io/runtime-namespace: reporter
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporter
      version: v1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: reporter
        deploymentconfig: reporter
        version: v1
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
        sidecar.istio.io/inject: 'true'
    spec:
      restartPolicy: Always
      serviceAccountName: reporter
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - name: reporter
          image: >-
            php@sha256:25417b6c9c2e1a52b551ba89087f4d07c216f58784773c9e7a1710a1f6e2b4a1
          ports:
            - name: http-reporter
              containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: reporter
              mountPath: /var/www/html
            - name: php-ini-vol
              mountPath: /usr/local/etc/php/conf.d/php.ini
              subPath: php.ini
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      serviceAccount: reporter
      volumes:
        - name: reporter
          persistentVolumeClaim:
            claimName: reporter
        - name: php-ini-vol
          configMap:
            name: php-ini-cm
            defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
